# fomoscript

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  test.rs
