[package]
name = "fomoscript"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Toy scripting language"
homepage = "https://github.com/Ruddle/fomoscript"
repository = "https://github.com/Ruddle/fomoscript"
readme = "README.md"
keywords = ["scripting", "no_std"]
categories = ["compilers","virtualization"]
[dependencies]
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false